Closed Bug 1705593 Opened 4 years ago Closed 4 years ago

Reftest on Android for SW-WR caused assertion failure

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(2 files)

When PBO of RenderCompositorOGLSWGL::TileOGL was disabled, reftest on Android for SW-WR caused assertion failure.

https://treeherder.mozilla.org/jobs?repo=try&revision=71bafd25851bf0d4456590ce47443a4fca9a9cca

Assignee: nobody → sotaro.ikeda.g
Blocks: 1704000
Attachment #9216308 - Attachment is patch: true
Attachment #9216308 - Attachment mime type: application/octet-stream → text/plain
Attachment #9216322 - Attachment description: WIP: Bug 1705593 - Fix TileOGL::Unmap() → Bug 1705593 - Fix TileOGL::Unmap()
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/14872562c53f Fix TileOGL::Unmap() r=lsalzman,gfx-reviewers
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: