Bug 1705593 - Fix TileOGL::Unmap() r=lsalzman,gfx-reviewers

When Map() is called, Unmap() needs to be called.

Differential Revision: https://phabricator.services.mozilla.com/D112321